--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
-html {
 
-}
 body,html {  
     font-family: "Playfair Display";
     font-size: 16px;
+    background-color: midnightblue;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+   
 }
 
+body {
+    opacity: 0.9;
+  
+}
 .quote-box {
   border-radius:3px;
   position:relative;
@@ -35,11 +42,15 @@ h1 {
     margin:8% auto auto auto;
     width: 300px;
     height: 100px;
-   
-
     background-color: lightgray;
     opacity: 0.8;
 }
+
+#dvImage {
+    background-size: cover;
+}
+
+
 
 
 
